k8s/frontend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiap-frontend-service
  namespace: fiap-frontend
spec:
  type: LoadBalancer
  selector:
    app: fiap-frontend
  ports:
    - name: http
      protocol: TCP
      port: 30150
      targetPort: http
